<?xml version="1.0"?>
<package format="2">
  <name>pses_kinect_utilities</name>
  <version>0.2.1</version>
  <description>The kinect_utilities package</description>
  <maintainer email="aceronicolas@hotmail.com">Nicolas Acero</maintainer>
  <maintainer email="sebastian.ehmes@gmx.de">Sebastian Ehmes</maintainer>

  <url type="repository">https://github.com/tud-pses/pses_kinect_utilities</url>
  <url type="website">https://github.com/tud-pses/pses_kinect_utilities/wiki</url>
  <url>https://github.com/tud-pses/pses_kinect_utilities</url>

  <author email="aceronicolas@hotmail.com">Nicolas Acero</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>depth_image_proc</depend>
  <depend>libopencv-dev</depend>
  <depend>opencl-headers</depend>
  <depend>ocl-icd-opencl-dev</depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />

  </export>
</package>
